<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A95D1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#3F51B5"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="@string/heading"
        android:textColor="#FFFAFA"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B7BEE3"
        android:orientation="horizontal">

        <Space
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/input"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7982BC"
                android:entries="@array/spinnerItems"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#7983BD"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/deleteview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#6871AC"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/clearview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#5B659F"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <ListView
                android:id="@+id/taskList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#5E3F51B5">

            </ListView>
        </LinearLayout>

        <Space
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>